@@ -1,5 +1,9 @@
 2010-08-05  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* library/tktable.py (Table.width): handle empty colum
+	(Table._tabsubst): improve substitutions [Bug 2293127] (ggpolo)
+	(ArrayVar): improve py integration [Bug 2333824] (ggpolo)
+
 	* generic/tkTable.c (TableFetchSelection): significant performance
 	improvement in large table selection retrieval. [Bug 2901813] (cerney)
 
